; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_send_file_sync_error_notification.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_send_file_sync_error_notification.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32 }
%struct.TYPE_4__ = type { i8* }

@seaf = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [8 x i8] c"repo_id\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"repo_name\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"path\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"err_id\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"sync.error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_file_sync_error_notification(i8* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %27, label %14

14:                                               ; preds = %4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call %struct.TYPE_4__* @seaf_repo_manager_get_repo(i32 %17, i8* %18)
  store %struct.TYPE_4__* %19, %struct.TYPE_4__** %9, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %21 = icmp ne %struct.TYPE_4__* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %14
  br label %67

23:                                               ; preds = %14
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  store i8* %26, i8** %6, align 8
  br label %27

27:                                               ; preds = %23, %4
  %28 = load i8*, i8** %5, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @seaf_repo_manager_record_sync_error(i8* %28, i8* %29, i8* %30, i32 %31)
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load i8*, i8** %5, align 8
  %37 = load i32, i32* %8, align 4
  %38 = call i32 @seaf_sync_manager_set_task_error_code(i32 %35, i8* %36, i32 %37)
  %39 = call i32* (...) @json_object()
  store i32* %39, i32** %10, align 8
  %40 = load i32*, i32** %10, align 8
  %41 = load i8*, i8** %5, align 8
  %42 = call i32 @json_string(i8* %41)
  %43 = call i32 @json_object_set_new(i32* %40, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %42)
  %44 = load i32*, i32** %10, align 8
  %45 = load i8*, i8** %6, align 8
  %46 = call i32 @json_string(i8* %45)
  %47 = call i32 @json_object_set_new(i32* %44, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %46)
  %48 = load i32*, i32** %10, align 8
  %49 = load i8*, i8** %7, align 8
  %50 = call i32 @json_string(i8* %49)
  %51 = call i32 @json_object_set_new(i32* %48, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %50)
  %52 = load i32*, i32** %10, align 8
  %53 = load i32, i32* %8, align 4
  %54 = call i32 @json_integer(i32 %53)
  %55 = call i32 @json_object_set_new(i32* %52, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 %54)
  %56 = load i32*, i32** %10, align 8
  %57 = call i8* @json_dumps(i32* %56, i32 0)
  store i8* %57, i8** %11, align 8
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = load i8*, i8** %11, align 8
  %62 = call i32 @seaf_mq_manager_publish_notification(i32 %60, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i8* %61)
  %63 = load i8*, i8** %11, align 8
  %64 = call i32 @free(i8* %63)
  %65 = load i32*, i32** %10, align 8
  %66 = call i32 @json_decref(i32* %65)
  br label %67

67:                                               ; preds = %27, %22
  ret void
}

declare dso_local %struct.TYPE_4__* @seaf_repo_manager_get_repo(i32, i8*) #1

declare dso_local i32 @seaf_repo_manager_record_sync_error(i8*, i8*, i8*, i32) #1

declare dso_local i32 @seaf_sync_manager_set_task_error_code(i32, i8*, i32) #1

declare dso_local i32* @json_object(...) #1

declare dso_local i32 @json_object_set_new(i32*, i8*, i32) #1

declare dso_local i32 @json_string(i8*) #1

declare dso_local i32 @json_integer(i32) #1

declare dso_local i8* @json_dumps(i32*, i32) #1

declare dso_local i32 @seaf_mq_manager_publish_notification(i32, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @json_decref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
